[package]
name = "simple_pkcs8"
version = "0.1.0"
authors = ["Yevhenii Horniak <y.gorniak@samsung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty-hex = "0.2.1"
chrono = { default-features = false, features = ["alloc"], version = "0.4" }
simple_asn1 = { version = "0.5.1", path = "/home/ygorniak/repo/simple_asn1" }
ring = { version = "0.16.20", path = "/home/ygorniak/repo/ring" }
num-bigint = "0.4.0"
num-traits = "0.2"
